# nonebot-adapter-mail

./: .pre-commit-config.yaml  pyproject.toml
nonebot/adapters/mail/: adapter.py  bot.py  config.py  event.py  exception.py  message.py  model.py  utils.py
